Minor text changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <h2>Method</h2>
             <ol>
                 <li>
-                    <p>Pre-heat the oven to 190C (of 170C for fan ovens or gas mark 5). Grease two 8-inch / 20cm sandwich tins. Line the tins with grease-proof paper.</p>
+                    <p>Pre-heat the oven to 190C (of 170C for fan ovens or gas mark 5). Grease two 8-inch / 20cm sandwich tins.
+                        Line the tins with grease-proof paper.</p>
                 </li>
                 <li>
                     <p>In a small bowl, beat the 4 eggs together. Add the beaten eggs to a large bowl and beat together with the caster sugar, softened butter, self-raising flour, baking powder and milk together until you have a smooth, soft batter.</p>
